fix: Align design system page with AXE rules

--- a/css/base.css
+++ b/css/base.css
@@ -25,6 +25,7 @@ Colors
     background-color: var(--dark-blue-color);
 }
 .light-gray{
+    color:black;
     background-color: var(--light-gray-color);
 }
 .dark-gray{
